# clod

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: argv.rs  cli.rs  main.rs  paths.rs  profile.rs  run.rs  state.rs
tests/: cli.rs
